Adds some more content

--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Luís Cardoso</title>
-        <meta name="description" content="">
+        <meta name="description" content="Homepage of Luís Cardoso">
         <meta name="viewport" content="width=device-width">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -16,20 +13,27 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
-
         <div class="main">
             <h1>Hi stranger!</h1>
 
             <p>This is my, mostly empty, personal homepage. Less is more FTW, am I right?</p>
             <p>Well you probably came here looking for something, so here are some links:</p>
-            <p><a href="https://github.com/lfac-pt">Github</a></p>
-            <p><a href="https://twitter.com/lfacpt">Twitter</a></p>
-            <p><a href="http://pt.linkedin.com/in/lfacc">Linkedin</a></p>
+            <p>
+                <ul>
+                    <li><a href="https://github.com/lfac-pt">Github</a></li>
+                    <li><a href="https://twitter.com/lfacpt">Twitter</a></li>
+                    <li><a href="http://pt.linkedin.com/in/lfacc">Linkedin</a></li>
+                </ul>
+            </p>
+            <p>Not satisfied yet? What more can I say? What I do for a living? Hum, I suppose thats a good start.</p>
+            <p>I'm a front-end &amp; JavaScript developer at <a href="http://www.feedzai.com/">FeedZai</a>, where I'm helping to build a quite large single page web application that is the face of our product.</p>
+            <p>Also, I'm quite a fan of reading spy thrillers, going to the movies, and... Wait, I shouldn't be disclosing personal information to strangers!</p>
+            <p>Are you trying to guess the secret question to access one of my accounts? STOP IT! You are not going to guess it anyways (random char string, FYI) so good luck with that.</p>
         </div>
-        
+
+        <footer>
+            &copy; Luís Cardoso 2013
+        </footer>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
         <script>
