--- a/index.html
+++ b/index.html
@@ -1,90 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Luís Cardoso</title>
-        <meta name="description" content="Homepage of Luís Cardoso">
-        <meta name="viewport" content="width=device-width">
-
-        <style type="text/css">
-            body {
-              font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
-              text-align: center;
-              color: #444;
-              font-size: 24px;
-              line-height: 1.3;
-            }
-
-            h1, h2, h3{
-              font-weight: normal;
-              font-family: Baskerville, Garamond, Palatino, "Palatino Linotype", "Hoefler Text", "Times New Roman", serif;
-            }
-
-            a {
-              color: #444;
-            }
-
-            a:visited {
-              color: #444;
-            }
-
-            a:hover {
-              color: #000;
-            }
-
-            p {
-                margin-bottom: 0;
-            }
-
-            p + p {
-                text-indent:1.3em;
-                margin-top: 0; 
-            }
-
-            .main {
-                width: 29em;
-                display: inline-block;
-                text-align: left;
-            }
-
-            footer {
-                margin-top: 5em;
-                margin-bottom: 1em;
-                color: grey;
-                font-size: 0.5em;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="main">
-            <h1>Hi stranger!</h1>
-
-            <p>This is my, mostly empty, personal homepage. Less is more FTW, am I right?</p>
-            <p>Well you probably came here looking for something, so here are some links:</p>
-            <p>
-                <ul>
-                    <li><a href="https://github.com/lfac-pt">Github</a></li>
-                    <li><a href="https://twitter.com/lfacpt">Twitter</a></li>
-                    <li><a href="http://pt.linkedin.com/in/lfacc">Linkedin</a></li>
-                </ul>
-            </p>
-            <p>Not satisfied yet? What more can I say? What I do for a living? Hum, I suppose thats a good start.</p>
-            <p>I'm a front-end &amp; JavaScript developer at <a href="http://www.feedzai.com/">FeedZai</a>, where I'm helping to build a quite large single page web application that is the face of our product.</p>
-            <p>Also, I'm quite a fan of reading spy thrillers, going to the movies, and... Wait, I shouldn't be disclosing personal information to strangers!</p>
-            <p>Are you trying to guess the answer to my secret question to access one of my accounts? STOP IT! You are not going to guess it anyways (random char string, FYI) so good luck with that.</p>
-        </div>
-
-        <footer>
-            &copy; Luís Cardoso 2013
-        </footer>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>-->
-    </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1"><title>Luís Cardoso</title><meta name=description content="Homepage of Luís Cardoso"><meta name=viewport content="width=device-width"><style>body{font-family:Corbel,"Lucida Grande","Lucida Sans Unicode","Lucida Sans","DejaVu Sans","Bitstream Vera Sans","Liberation Sans",Verdana,"Verdana Ref",sans-serif;text-align:center;color:#444;font-size:24px;line-height:1.3}h1,h2,h3{font-weight:normal;font-family:Baskerville,Garamond,Palatino,"Palatino Linotype","Hoefler Text","Times New Roman",serif}a{color:#444}a:visited{color:#444}a:hover{color:#000}p{margin-bottom:0}p+p{text-indent:1.3em;margin-top:0}.main{width:29em;display:inline-block;text-align:left}footer{margin-top:5em;margin-bottom:1em;color:grey;font-size:.5em}</style><body><div class=main><h1>Hi stranger!</h1><p>This is my, mostly empty, personal homepage. Less is more FTW, am I right?</p><p>Well you probably came here looking for something, so here are some links:</p><p><ul><li><a href="https://github.com/lfac-pt">Github</a></li><li><a href="https://twitter.com/lfacpt">Twitter</a></li><li><a href="http://pt.linkedin.com/in/lfacc">Linkedin</a></li></ul></p><p>Not satisfied yet? What more can I say? What I do for a living? Hum, I suppose thats a good start.</p><p>I'm a front-end &amp; JavaScript developer at <a href="http://www.feedzai.com/">FeedZai</a>, where I'm helping to build a quite large single page web application that is the face of our product.</p><p>Also, I'm quite a fan of reading spy thrillers, going to the movies, and... Wait, I shouldn't be disclosing personal information to strangers!</p><p>Are you trying to guess the answer to my secret question to access one of my accounts? STOP IT! You are not going to guess it anyways (random char string, FYI) so good luck with that.</p></div><footer>&copy; Luís Cardoso 2013</footer>
