More style changes

--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
               font-weight: normal;
             }
 
-            h1, h2, h3{
-              font-weight: normal;
-			  font-size: 4em;
-			  text-align: center;
+			h1, h2, h3{
+              	font-weight: normal;
+			  	text-align: center;
+            }
+
+            h1{
+			  	font-size: 4em;
+				margin-top: 2em;
+				margin-bottom: 2em;
             }
 
             a {
@@ -122,11 +127,11 @@
     </head>
     <body>
         <div class="main">
-            <h1>Hello stranger!</h1>
+            <h1>Hello stranger</h1>
 
             <p class="opening"><span class="firstLetter">T</span>his is my, mostly empty, personal homepage. Look at all this white space ( ︶︿︶ )</p>
 
-            <p>&#10086; Well, you probably came here looking for something, so here are some links:</p>
+            <p>&#10086; Well, you probably came here looking for something, so here, have some links:</p>
             <p>
                 <ul class="links">
                     <li><a href="https://github.com/lfac-pt" target="_blank">Github</a></li>
@@ -134,7 +139,7 @@
                     <li><a href="http://pt.linkedin.com/in/lfacc" target="_blank">Linkedin</a></li>
                 </ul>
             </p>
-            <p>&#10086; Also, I ocasionally take some photos<sup>&dagger;</sup>, you can check out a selection of them in my <a href="http://lfac.vsco.co/" target="_blank">VSCO stream</a>.</p>
+            <p>&#10086; Also, in case you are interested, I ocasionally take some photos<sup>&dagger;</sup> and you can check out a selection of them in my <a href="http://lfac.vsco.co/" target="_blank">VSCO stream</a>.</p>
 
             <p class="sectionSeparator">&#8258;</p>
 
@@ -144,7 +149,14 @@
           	<p class="sectionSeparator">&#8258;</p>
 
             <p>&#10086; Also, I'm quite a fan of reading spy thrillers, going to the movies, and... Wait, I shouldn't be disclosing personal information to strangers!</p>
-            <p>&#10086; Are you trying to guess the answer to my secret question to access one of my accounts‽ STOP IT! You are not going to guess it anyways (random string of gibberish, FYI) so good luck with that.</p>
+
+            <p class="sectionSeparator">ಠ_ಠ</p>
+
+            <p>&#10086; Are you trying to guess the answer to my secret question to access one of my accounts‽</p>
+
+            <p class="sectionSeparator">(ง'̀-'́)ง</p>
+
+            <p>&#10086; STOP IT! You are not going to guess it anyways (random string of gibberish, FYI) so good luck with that.</p>
 
             <p class="sectionSeparator">&loz;</p>
 
@@ -158,7 +170,7 @@
 					</ul>
 				</p>
 
-				<h3>&sect; Abouth The Author &sect;</h3>
+				<h3>&sect; About The Author &sect;</h3>
 
 				<p class="aboutMe">
 					Designed and handmade in Portugal with <span class="heart">♥</span> by me.
