Added even more ASCII

--- a/index.html
+++ b/index.html
@@ -150,6 +150,20 @@
         <div class="main">
             <h1>Hello stranger</h1>
 
+            <h2>Welcome!</h2>
+
+            <h2>&#9735</h2>
+
+            <h2>Don't stay outside in the cold.</h2>
+
+            <h2>&#9729</h2>
+
+            <h2>Come in.</h2>
+
+            <h2>Warm up these cold bones in the confort of the fire.</h2>
+
+            <h2>&#9832</h2>
+
             <p class="opening"><span class="firstLetter">T</span>his is my, mostly empty, personal homepage. Look at all this white space ( ︶︿︶ )</p>
 
             <p>&#10086; Well, you probably came here looking for something, so here, have some links:</p>
@@ -178,7 +192,7 @@
           	<p class="sectionSeparator">ಠ_ಠ</p>
 
 
-            <p>&#10086; STOP IT!</p>
+            <p>&#10086; STOP IT</p>
 
             <p class="sectionSeparator">(ง'̀-'́)ง</p>
 
