Corrects some typos

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
             <h2>Come in.</h2>
 
-            <h2>Warm up these cold bones in the confort of the fire.</h2>
+            <h2>Warm up these cold bones in the comfort of the fire.</h2>
 
             <h2>&#9832</h2>
 
@@ -184,7 +184,7 @@
                     <li><a href="http://pt.linkedin.com/in/lfacc" target="_blank">Linkedin</a></li>
                 </ul>
             </p>
-            <p>&#10086; Also, in case you are interested, I ocasionally take some photos<sup><a href="#note1">&dagger;</a></sup> and you can check out a selection of them in my <a href="http://lfac.vsco.co/" target="_blank">VSCO stream</a>.</p>
+            <p>&#10086; Also, in case you are interested, I occasionally take some photos<sup><a href="#note1">&dagger;</a></sup> and you can check out a selection of them in my <a href="http://lfac.vsco.co/" target="_blank">VSCO stream</a>.</p>
 
             <p class="sectionSeparator">&#8258;</p>
 
@@ -215,7 +215,7 @@
 
 				<p>
 					<ul class="refs">
-						<li id="note1">Photos may be amateurish and/or boring. NO GARANTEES are made regarding entertainment and/or educational value.</li>
+						<li id="note1">Photos may be amateurish and/or boring. Proceed at your own risk.</li>
 						<li id="note2">More precisely, lead front-end developer.</li>
 						<li>ASCII art courtesy of <a href="https://www.npmjs.org/package/cool-ascii-faces">cool-ascii-faces</a></li>
 					</ul>
