Changes FeedZai to Feedzai

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </p>
             <p>Also, I ocasionally take some (amateur) photos, you can check them <span id="y1">o</span>ut in my <a href="http://lfac.vsco.co/">VSCO stream</a>.</p>
             <p>N<span id="y2">o</span>t satisfied yet? What more can I say? What I do for a living? Hum, I suppose thats a good start.</p>
-            <p>I'm a front-end &amp; JavaScript developer at <a href="http://www.feedzai.com/">FeedZai</a>, where I'm helping to build a quite large single page web application that is the face of our product.</p>
+            <p>I'm a front-end &amp; JavaScript developer at <a href="http://www.feedzai.com/">Feedzai</a>, where I'm helping to build a quite large single page web application that is the face of our product.</p>
             <p>Also, I'm quite a fan of reading spy thrillers, going to the movies, and... Wait, I shouldn't be disclosing personal information to strangers!</p>
             <p>Are you trying to guess the answer to my secret question to access one of my accounts? STOP IT! You are not going to guess it anyways (random char string, FYI) so good luck with that.</p>
         </div>
