--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
             <h2>Come in.</h2>
 
-            <h2>Warm up these cold bones in the comfort of the fire.</h2>
+            <h2>Warm up those cold bones in the comfort of the fire.</h2>
 
             <h2>&#9832</h2>
 
