Added Link to medium

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <li><a href=https://github.com/lfac-pt target=_blank rel="noopener noreferrer">Github</a></li>
 <li><a href=https://twitter.com/lfacpt target=_blank rel="noopener noreferrer">Twitter</a></li>
 <li><a href=https://pt.linkedin.com/in/lfacc target=_blank rel="noopener noreferrer">Linkedin</a></li>
+<li><a href=https://medium.com/@lfacpt target=_blank rel="noopener noreferrer">Medium</a></li>  
 </ul>
 </p>
 <p>&#10086; Also, in case you are interested, I occasionally take some photos and you can check out a selection of them in my <a href=https://www.instagram.com/lfac_pt/ target=_blank rel="noopener noreferrer">Instagram feed</a>.</p>
@@ -48,7 +49,7 @@
 </p>
 <h3>&sect; About The Author &sect;</h3>
 <p class=aboutMe>Designed and handmade in Portugal with <span class=heart>♥</span> by me</p>
-<p class=aboutMe>Last update September 2018</p>
+<p class=aboutMe>Last update July 2019</p>
 </div>
 <p class=sectionSeparator>&Omega;</p>
 </div>
